# mcpayment-test

./: .editorconfig  LICENSE  README.md  mcpayment-test.cabal
.github/workflows/: test.yaml
src/: Solution.hs
test/: Main.hs
